# AdvancedImageSearch

./: AUTHORS  CMakeLists.txt  COPYING  CodeBlocks.workspace  INSTALL  LICENSE  README  README.md  get-dependencies.sh  install.sh  makeSystem.sh  makefile  uninstall.sh
3dparty/: getOpenCV3.2.sh  get_third_party_libs.sh
samples/: blue.ppm  green.ppm  red.ppm
scripts/: apt-get-dependencies.sh  debug.sh  makeSystem.sh  pacman-dependencies.sh  uninstall.sh  updateMakeFileFromCBP.sh  update_from_git.sh
src/: install.sh~
src/AdvancedImageSearchLib/: AdvancedImageSearchLib.cbp  AdvancedImageSearchLib.cbp.mak  AdvancedImageSearchLib.depend  AdvancedImageSearchLib.h  CMakeLists.txt  configuration.h  main.c  makeSystem.sh  version.h
src/AdvancedImageSearchLib/caching/: resultbank.c  resultbank.h
src/AdvancedImageSearchLib/codecs/: codecs.c  codecs.h  jpg.c  jpg.h  jpgExiforient_embed.c  jpgInput.c  jpgInput.h  pngInput.c  pngInput.h  ppm.c  ppm.h  ppmInput.c
src/AdvancedImageSearchLib/image_processing/: faceDetection.c  faceDetection.h  filters.c  filters.h  findObjectsSURF.c  findObjectsSURF.h  findPatterns.c  findPatterns.h  histograms.c  histograms.h  imageComparison.c  imageComparison.h  imageResizer.c  imageResizer.h
src/AdvancedImageSearchLib/neural_networks/: findSemantics.c  findSemantics.h
src/AdvancedImageSearchLib/tools/: parameter_parser.c  parameter_parser.h  string_extension_scanner.c  string_extension_scanner.h  timers.c  timers.h
src/DarknetProcessor/: CMakeLists.txt  DarknetProcessor.c
src/PatternRecognition/: CMakeLists.txt  PatternRecognition.cbp  PatternRecognition.cbp.mak  PatternRecognition.h  main.cpp
src/cmpimg/: CMakeLists.txt  cmpimg.c  cmpimg.cbp  cmpimg.cbp.mak
src/lsimg/: CMakeLists.txt  debug.sh  lsimg.cbp  lsimg.cbp.mak  lsimg.depend  main.c
